App/static/style.css
/* ... */
#scroll-to-top-arrow {
    color: white; 
    font-size: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px; 
    background-color: #c20605;
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

#scroll-to-top-arrow:hover {
    cursor: pointer;
    filter: brightness(70%);
    -webkit-filter: brightness(70%);
    -webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
    -ms-transition: all 0.2s ease;
    transition: all 0.2s ease;
}

#scroll-to-top-arrow:active {
    filter: brightness(50%);
}

#main-nav-logo {
    width: 200px;
}

#main-nav-logo > * img {
    max-width: 100%;
    max-height: 100%;
    filter: brightness(100%);
    -webkit-filter: brightness(100%);
}

#main-nav-logo > * img:hover {
    filter: brightness(70%);
    -webkit-filter: brightness(70%);
    -webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
    -ms-transition: all 0.2s ease;
    transition: all 0.2s ease;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 50%;
    height: 20%;
    overflow: hidden;
    background-color: rgba(0,0,0,0);
    border: 1px solid #ffffff;
    border-radius: 25px;
}

.modal-content {
    font-family: Oswald;
    background-color:rgb(68, 67, 67);
    color:rgb(0, 0, 0);
    font-family: Calibri, Helvetica, sans-serif;
    padding: 20px;
    width: 100%;
}

#user-nav-profile-modal input{
    font-family: Calibri, Helvetica, sans-serif;
    background-color: black ;
    color:rgb(163, 160, 160);

}

#user-nav-profile-modal button,
#user-nav-profile-modal a{
    font-family: Calibri, Helvetica, sans-serif;
    background-color: black;
    color:rgb(163, 160, 160);
    font-size: 12px;
}

#user-nav-profile-modal {
    background-color: #646060b1;
    width: calc(64px * 5 + 10px);
    height: fit-content;
    margin: 0 auto;
    top: 75px;
    margin-right: 17px;
    border-radius: 15px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    z-index: 1;

    /* slide downwards transition */
    -webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
}

#user-nav-profile {
    display: inline-block;
    position: relative;
    height: 60px;
    padding: 5px;
}

#user-nav-profile:hover {
    filter: brightness(70%);
    cursor: pointer;
    -webkit-filter: brightness(70%);
    -webkit-transition: all 0.2s ease;
    -moz-transition: all 0.2s ease;
    -o-transition: all 0.2s ease;
    -ms-transition: all 0.2s ease;
    transition: all 0.2s ease;
}

#user-nav-profile:active {
    filter: brightness(50%);
}

#user-nav-profile > img {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    object-fit: cover;
}

/* Footer */
.tiktok-icon,
.facebook-icon,
.instagram-icon{
    margin-top: .625em;
    width: 40px;
    height: 40px;
    border-radius: 25px;
}

.site-footer > * p {
    color: white; 
    margin: 0 auto; 
}

.footer p {
    text-align: center;
    background-color: #c20605;
    color: white;
    margin-bottom: 0; 
    margin-top: 10px;
    font-family: 'Times New Roman', Times, serif;
}

.site-footer {
    background-color: #000000;
    text-align: center;
    bottom:0px;
    width: 100%;
    margin-left: 0;
    margin-right: 0;
    height: 90px;
}

#social-wrapper {
    text-align: center;
}
  
/*Social Media Icons*/
.social-wrapper {
    text-align: center;
}
  
.social-wrapper ul li {
    display: inline;
    margin: 0 5px;
}


/*Base Page Template*/
.page-styling
{
    font-family: Oswald;
    background-color: #000000;
    border: 3px solid #9b0404;
}

/*horizontal cards template - 4 per line*/
.column {
    float: left;
    width: 25%;
    padding: 0 10px;
  }
  
.row {
    margin: 0 -5px;
}
  
  @media screen and (max-width: 600px) {
    .column {
      width: 100%;
      display: block;
      margin-bottom: 20px;
    }
  }
  
  .card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 16px;
    text-align: center;
    background-color: #f1f1f1;
  }

  .card:hover {
    transform: translateY(-5px);
    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
}

/*Scrolling Cards Template - Horizontal*/
.scrolling-wrapper {
    -webkit-overflow-scrolling: touch;
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
}

.scrolling-wrapper .horizontal-card {
    flex: 0 0 auto;
    background-color: #4b4949;
    margin-bottom: 0;
}

.horizontal-card img{
    max-width: 100%;
    max-height: 40vh;
    display: block;
}

.scrolling-wrapper ::-webkit-scrollbar{
    display: none;
}

/*Div Center Template*/
.center {
    margin: auto;
    width: 50%;
    padding: 10px;
}

/*Text on Img Template*/
.img-container {
    position: relative;
    text-align: center;
    color: white;
}

.img-container h1,
.img-container h2{
    font-size: 30pt;
    color:#000000;
    line-height: 95%;
}

.centered {
    position: absolute;
    top:40%;
    left:50%;
    transform: translate(-50%, -50%);
}

.centered p {
    width: 50vw;
    max-width: 500px;
}

/*Packages Template*/
.pkgs{
    background-color: #000000;
    padding: 2em;
}

.pkgs * {
    box-sizing: border-box;
  }
.pkgs .card{
    background-color: #222121d5;
    box-shadow: 0 0 10px rgba(204, 46, 46, 0.76);
}

.pkgs img{
    max-width: 100%;
    max-height: 100%;
    display: block;
}

/*Template used for the second section 
of facilities and classes pages*/
.card-data{
    font-family: Oswald;
}

.card-data h2{
    font-size: 35pt ;
    color:#000000;
    margin-top: 0;
}

.card-data h3{
    font-size: 25pt ;
    color: #c20605;
}

.card-data p{
    text-align: justify;
    color: #d6d4d4bb;
}

.card-data .card{
    border: 3px solid #9b0404;
    border-radius: 10px;
    text-align: center;
}
/* ... */

